--- a/nosotros.html
+++ b/nosotros.html
@@ -53,7 +53,7 @@
                     <div class="col" style="margin-bottom: 2rem;">
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/alexis-normal.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                <img src="src/img/nosotros/AlexisSanchez.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                 class="img-fluid rounded static" alt="Alexis"><img class="active" src="src/img/nosotros/alexis-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                 class="img-fluid rounded" alt="Alexis">
                             </div>
@@ -82,7 +82,7 @@
                     <div class="col" style="margin-bottom: 2rem;">
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/brayan-normal.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                <img src="src/img/nosotros/BryanMartinez.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                 class="img-fluid rounded static" alt="Bryan"><img class="active" src="src/img/nosotros/brayan-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                 class="img-fluid rounded" alt="Bryan">
                             </div>
@@ -111,7 +111,7 @@
                     <div class="col" style="margin-bottom: 2rem;">
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/juan-normal.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                <img src="src/img/nosotros/JuanCarlos.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                 class="img-fluid rounded static" alt="Carlos"><img class="active" src="src/img/nosotros/juan-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                 class="img-fluid rounded" alt="Carlos">
                             </div>
@@ -141,7 +141,7 @@
                     <div class="col" style="margin-bottom: 2rem;">
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/ignacio-normal.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                <img src="src/img/nosotros/CarlosZepeda.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                 class="img-fluid rounded static" alt="Ignacio"><img class="active" src="src/img/nosotros/ignacio-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                 class="img-fluid rounded" alt="Ignacio">
                                 <!-- <img src="./src/img/nosotros/CarlosZepeda.jpeg"
@@ -174,7 +174,7 @@
                     <div class="col" style="margin-bottom: 2rem;">
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/aristeo-normal.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                <img src="src/img/nosotros/JuanAristeo.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                 class="img-fluid rounded static" alt="Luis"><img class="active" src="src/img/nosotros/aristeo-normal.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                 class="img-fluid rounded" alt="Luis">
                             </div>
@@ -203,7 +203,7 @@
                     <div class="col" style="margin-bottom: 2rem;">
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/roberto-normal.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                <img src="src/img/nosotros/RobertoRivas.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                 class="img-fluid rounded static" alt="Roberto"><img class="active" src="src/img/nosotros/roberto-pintado.jpg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                 class="img-fluid rounded" alt="Roberto">
                             </div>
